--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,6 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>VALORANT puuid to Name</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/TypewriterJS/2.18.2/core.min.js" integrity="sha512-g8TodWNzrsxJkADtGuwwvVND2MVKUuisGWZsj2/NtLA/XFDq9biQpeDMcJ8iu71OpabLfDxfEAdTQFdXjmV60A==" crossorigin="anonymous" charset="utf-8" referrerpolicy="no-referrer"></script>
   <script>
     if (localStorage.getItem('color-theme') === 'dark' || (!('color-theme' in localStorage) && window.matchMedia('(prefers-color-scheme: dark)').matches)) {
         document.documentElement.classList.add('dark');
@@ -71,17 +70,11 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
     </div>
   </div>
   <!-- footer -->
-  <!--<div class="fixed bottom-0 bg-inherit w-full justify-center text-stone-900 dark:text-slate-300 text-xxs">
-    <div class="flex justify-center">
-      <a href="https://github.com/godeProject/godeweb/commits/main" target="_blank" class="block px-3">dev - v0.2.1-rc4</a>
-    </div>
+  <div class="fixed bottom-0 bg-inherit w-full justify-center text-stone-900 dark:text-slate-300 text-xxs">
     <div class="flex justify-center">
       <a href="https://github.com/gxjakkap" target="_blank" class="block px-3">Made with ❤️ by GuntxJakka</a>
     </div>
-    <div class="flex justify-center">
-      <a href="./about#:~:text=Read%20more%20here.-,License,-MIT%20License" class="block px-3 py-1">Copyright © 2022 g;ode Project. Click here to view license.</a>
-    </div>
-  </div>-->
+  </div>
   <script src="./js/index.js"></script>
 </body>
 </html>
