--- a/public/index.html
+++ b/public/index.html
@@ -31,6 +31,9 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
 </head>
 <body class="bg-zinc-200 dark:bg-gray-800">
   <div class="flex justify-between text-base text-black bg-zinc-400 dark:text-white dark:bg-gray-900 drop-shadow-2xl">
+    <div class="flex items-center justify-end">
+      <a href="https://github.com/gxjakkap/valorant-puuid-to-name" class="block px-3 py-2">GitHub</a>
+    </div>
     <button id="theme-toggle" type="button" class="text-gray-500 dark:text-gray-400 hover:bg-gray-100 dark:hover:bg-gray-700 focus:outline-none focus:ring-4 focus:ring-gray-200 dark:focus:ring-gray-700 rounded-lg text-sm p-3">
       <svg id="theme-toggle-dark-icon" class="w-7 h-7 hidden" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
         <path d="M17.293 13.293A8 8 0 016.707 2.707a8.001 8.001 0 1010.586 10.586z"></path>
@@ -70,7 +73,7 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
     </div>
   </div>
   <!-- footer -->
-  <div class="fixed bottom-0 bg-inherit w-full justify-center text-stone-900 dark:text-slate-300 text-xxs">
+  <div class="fixed bottom-0 bg-inherit w-full justify-center text-stone-900 dark:text-slate-300 text-xxs mb-5">
     <div class="flex justify-center">
       <a href="https://github.com/gxjakkap" target="_blank" class="block px-3">Made with ❤️ by GuntxJakka</a>
     </div>
